# byper

./: .gitignore  .pypirc  AGENTS.md  ESTADO.md  README.md  makefile  package-lock.json  package.json  turbo.json
apps/: package.json
apps/byper/: makefile  package.json  pyproject.toml
apps/byper/byper/: main.py
apps/byper/byper.egg-info/: PKG-INFO  requires.txt
apps/byper/byper/States/: __init__.py
apps/byper/byper/__core__/: environment.py  lockfile.py  manifest.py  tasks.py
apps/byper/byper/__core__/constants/: __init__.py
apps/byper/byper/__core__/utils/: logger.py
apps/byper/byper/awaiter/: __init__.pyi
apps/byper/byper/awaiter/__module__/: __init__.py
apps/byper/byper/env/: __module__.py
apps/byper/byper/tasks/: __init__.py  __module__.py
apps/python/byper/: README.md  makefile  pyproject.toml
apps/python/byper/byper/: __main__.py  main.py
apps/python/byper/byper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/python/byper/byper/States/: __init__.py  __init__.pyi
apps/python/byper/byper/__core__/: commands.py  environment.py  installation.py  lockfile.py  manifest.py  project_env.py  python_runtime.py  python_version.py  tasks.py
apps/python/byper/byper/alias/: __init__.pyi
apps/python/byper/byper/aliases/: __init__.py  __module__.py
apps/python/byper/byper/awaiter/: __init__.py
apps/python/byper/byper/env/: __init__.py  __init__.pyi
apps/python/byper/tests/: conftest.py  helpers.py  test_cli.py  test_performance.py  test_project_env.py  test_python_cli.py  test_python_runtime.py  test_python_version.py
(+67 files in other folders)
