[project]
name = "byper"
version = "0.1.0"
description = "A Python terminal console logging utility"
authors = [{ name = "Brayhan De Aza" }]
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "requests==2.32.3",
    "ruamel.yaml==0.17.21",
    "pyyaml==6.0.1",
    "dotenv==0.9.9"
]

[project.scripts]
byper = "byper.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
