[project]
name = "byper"
version = "0.0.2"
description = "A Python terminal console logging utility"
authors = [{ name = "Brayhan De Aza" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "requests==2.32.3",
    "ruamel.yaml==0.17.21",
    "pyyaml==6.0.1",
    "dotenv==0.9.9",
    "packaging==24.2"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5"
]

[tool.pytest.ini_options]
markers = [
    "network: tests that require network access",
    "performance: slow performance/benchmark tests (not run by default)",
]
addopts = "-m 'not performance'"

[project.scripts]
byper = "byper.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


